subprojects/swen430/src/test/resources/tests/valid/Cast_Valid_5.while
[int] f([int|null] x) {
    if (x is [int]) {
        return ([int]) x;
    } else {
        return [];
    }
}

void main() {
    print f([5, null]);
}
