subprojects/swen430/src/test/resources/tests/invalid/DefiniteAssign_Invalid_21.while
int f(int x) {
    int y;
    if(x == 0) {
        
    } else {
      y = 0;
    }
    return y;
}